--- a/index.html
+++ b/index.html
@@ -274,6 +274,86 @@
 
 
 		</section>
+
+		<!-- ==============================================
+		RECOMMENDATIONS
+		=============================================== -->
+		<section id="recommendations" class="white-bg">
+
+			<div class="container">
+
+				<div class="row skills">
+
+					<h1 class="text-center scrollimation fade-in">Recommendations</h1>
+				</div><!--End row -->
+
+				<div class="container">
+					<div class="row">
+	                    <div class="col-md-12" data-wow-delay="0.2s">
+	                        <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+	                            <!-- Bottom Carousel Indicators -->
+<!-- 	                            <ol class="carousel-indicators">
+	                                <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
+	                                </li>
+	                                <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
+	                                </li>
+	                                <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
+	                                </li>
+	                            </ol> -->
+
+	                            <!-- Carousel Slides / Quotes -->
+	                            <div class="carousel-inner text-center">
+
+	                                <!-- Quote 1 -->
+	                                <div class="item active">
+	                                    <blockquote>
+	                                        <div class="row">
+	                                            <div class="col-sm-8 col-sm-offset-2">
+
+	                                                <p>Micaela or Mickey as what we call her in the office is a very nice teammate. We worked on multiple projects before, using Oracle and Linux. She is very eager to learn thus she is up to date with technology. Personally, Mickey has the right attitude and qualifications in the software development industry by being detail-oriented and a very good team player.</p>
+	                                                <small>Jay Carlo Gomez, Software Development Supervisor at Smart Communications, Inc.</small>
+	                                            </div>
+	                                        </div>
+	                                    </blockquote>
+	                                </div>
+	                                <!-- Quote 2 -->
+	                                <div class="item">
+	                                    <blockquote>
+	                                        <div class="row">
+	                                            <div class="col-sm-8 col-sm-offset-2">
+
+	                                                <p>Mica was very resourceful in finding technical solutions to issues we've encountered during the development and testing phase of the project management tool we were developing for UTPI. She is a great teamplayer and worked well with her peers. Her cheerfulness and openness to help her teammates lead to more open communication within the team such that all issues in development and testing were easily resolved as the team was more open to share their ideas with each other. She is truly a joy to work with and I would love to work with her again</p>
+	                                                <small>Mia De Castro, Project Manager at Hewlett Packard</small>
+	                                            </div>
+	                                        </div>
+	                                    </blockquote>
+	                                </div>
+	                                <!-- Quote 3 -->
+	                                <div class="item">
+	                                    <blockquote>
+	                                        <div class="row">
+	                                            <div class="col-sm-8 col-sm-offset-2">
+
+	                                                <p>During the time that I had the opportunity to work with Mickey, I can say that she is very enthusiastic in working through her career path in the IT industry. In those times, she was still starting out but her determination was very evident especially in finding solutions for every challenge that she is faced with in the middle of software development phase. She is resourceful as well. Lastly the highlight that I could point out in her is the passion that she has in software development, aside from what is required she approaches software development/programming as a hobby as well, joining with symposiums, clubs and organizations of this particular interest to hone her talent and to collaborate though exchange of ideas. This I believe is a significant aspect that would drive her to reach greater heights in her chosen career.</p>
+	                                                <small>Earl Henry Averilla, Solutions Designer/Systems Architect at Globe Telecom</small>
+	                                            </div>
+	                                        </div>
+	                                    </blockquote>
+	                                </div>
+	                            </div>
+
+	                            <!-- Carousel Buttons Next/Prev -->
+	                            <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
+	                            <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
+	                        </div>
+	                    </div>
+	                </div>
+				</div>
+
+			</div>
+
+
+		</section>
  		<!-- ==============================================
 		PORTFOLIO
 		=============================================== -->
